[package]
name = "owa4x-sys"
version = "0.1.0"
authors = ["Nick Gamroth <thebeekeeper@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Low-level bindings to the C library provided to use functionality on the OWA4x embedded computer"

[dependencies]

[build-dependencies]
bindgen = "0.47.1"

