[package]
name = "owa4x-sys"
version = "0.1.5"
authors = ["Nick Gamroth <thebeekeeper@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Low-level bindings to the C library provided to use functionality on the OWA4x embedded computer"
license = "MIT"
repository = "https://github.com/thebeekeeper/owa4x-sys"

[dependencies]

[build-dependencies]
bindgen = "0.54.0"

